Fixed atropos not working on firefox and safari, improved about me text, removed horizontal padding from projects grid div

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -26,3 +26,11 @@
     width: 320px;
     height: 160px;
 }
+
+.atropos-scale {
+    pointer-events: none;
+}
+
+.atropos-rotate {
+    pointer-events: all;
+}
